# xfce4-zorinmenulite-plugin

./: CMakeLists.txt  README
.github/workflows/: main.yml
debian/: changelog  control  copyright  rules
icons/: CMakeLists.txt
panel-plugin/: CMakeLists.txt  applications-page.cpp  applications-page.h  category-page.cpp  category-page.h  category-view.cpp  category-view.h  category.cpp  category.h  command.cpp  command.h  element.h  launcher-view.cpp  launcher-view.h  launcher.cpp  launcher.h  page.cpp  page.h  place-button.cpp  place-button.h  plugin.cpp  plugin.h  query.cpp  query.h  register-plugin.c  run-action.cpp  run-action.h  search-action.cpp  search-action.h  search-page.cpp  search-page.h  slot.h  user-button.cpp  user-button.h  window.cpp  window.h  xfce4-popup-zorinmenulite.1  xfce4-popup-zorinmenulite.in
po/: CMakeLists.txt  af.po  am.po  an.po  ar.po  as.po  ast.po  be.po  bg.po  bn.po  bn_IN.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  kk.po  km.po  (+43 more)
