set(INSTALL_ICONDIR ${CMAKE_INSTALL_DATADIR}/icons/hicolor)

install(FILES hi16-app-zorinmenulite.png
        DESTINATION ${INSTALL_ICONDIR}/16x16/apps
        RENAME xfce4-zorinmenulite.png)

install(FILES hi24-app-zorinmenulite.png
        DESTINATION ${INSTALL_ICONDIR}/24x24/apps
        RENAME xfce4-zorinmenulite.png)

install(FILES hi32-app-zorinmenulite.png
        DESTINATION ${INSTALL_ICONDIR}/32x32/apps
        RENAME xfce4-zorinmenulite.png)

install(FILES hi48-app-zorinmenulite.png
        DESTINATION ${INSTALL_ICONDIR}/48x48/apps
        RENAME xfce4-zorinmenulite.png)

install(FILES hi64-app-zorinmenulite.png
        DESTINATION ${INSTALL_ICONDIR}/64x64/apps
        RENAME xfce4-zorinmenulite.png)

install(FILES hi128-app-zorinmenulite.png
        DESTINATION ${INSTALL_ICONDIR}/128x128/apps
        RENAME xfce4-zorinmenulite.png)

install(FILES hi256-app-zorinmenulite.png
        DESTINATION ${INSTALL_ICONDIR}/256x256/apps
        RENAME xfce4-zorinmenulite.png)

install(FILES hisc-app-zorinmenulite.svg
        DESTINATION ${INSTALL_ICONDIR}/scalable/apps
        RENAME xfce4-zorinmenulite.svg)

install(FILES hisy-app-zorinmenulite-symbolic.svg
        DESTINATION ${INSTALL_ICONDIR}/symbolic/apps
        RENAME xfce4-zorinmenulite-symbolic.svg)
